2008-05-31  *** Released version 0.8.4

2008-05-31  Fernando Perez  <Fernando.Perez@berkeley.edu>

	* IPython/ipmaker.py (make_IPython): The -twisted option is fully
	disabled.

	* IPython/Shell.py (_select_shell): completely disable -twisted.
	This code is of dubious quality and  normal users should not
	encounter it until we can clarify things further, even under
	win32.  Since we need a quick emergency 0.8.4 release, it is now
	disabled completely.  Users who want to run it can use the
	following command (it's easy to put it in an alias or script):
	
	python -c"from IPython import twshell;twshell.IPShellTwisted().mainloop()"

2008-05-30  Ville Vainio <vivainio@gmail.com>

	* shell.py: disable -twisted on non-win32 platforms.
	import sets module on python 2.3.

	* ipy_profile_sh.py: disable ipy_signals. Now, ipython
	is verified to work with python 2.3
	
	* Release.py: update version to 0.8.4 for quick point fix

2008-05-28  *** Released version 0.8.3

2008-05-28  Fernando Perez  <Fernando.Perez@berkeley.edu>

	* ../win32_manual_post_install.py (run): Fix the windows installer
	so the links to the docs are correct.

	* IPython/ultraTB.py: flush stderr after writing to it to fix
	problems with exception traceback ordering in some platforms.
	Thanks to a report/fix by Jie Tang <jietang86-AT-gmail.com>.

	* IPython/Magic.py (magic_cpaste): add stripping of continuation
	prompts, feature requested by Stefan vdW.

	* ../setup.py: updates to build and release tools in preparation
	for 0.8.3 release.

2008-05-27  Ville Vainio <vivainio@gmail.com>

	* iplib.py, ipmaker.py: survive lack of doctest and site._Helper
	for minimal environments (e.g. Maemo sdk python)

	* Magic.py: cpaste strips whitespace before >>> (allow pasting
	doctests)

	* ipy_completers.py: cd completer now does recursive path expand
	(old behaviour is buggy on some readline versions)

2008-05-14  Ville Vainio <vivainio@gmail.com>

	* Extensions/ipy_greedycompleter.py: 