@@ -1,3 +1,9 @@
+2008-06-02  Fernando Perez  <Fernando.Perez@berkeley.edu>
+
+	* IPython/Shell.py (MatplotlibShellBase._matplotlib_config): add
+	numpy/np/pyplot/plt imports according to new conventions we're
+	trying to standardize on.  This only affects the -pylab mode.
+
 2008-05-31  *** Released version 0.8.4
 
 2008-05-31  Fernando Perez  <Fernando.Perez@berkeley.edu>
